# spotifyd-http

./: .gitignore  Cargo.toml  README.md
src/: main.rs  web_server.rs
